--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/Theme.MillieApplication"
         tools:targetApi="31">
         <activity
-            android:name=".presentation.MainActivity"
+            android:name=".presentation.view.CatActivity"
             android:exported="true"
             android:theme="@style/Theme.MillieApplication">
             <intent-filter>
