--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:name=".MillieApplication"
@@ -17,7 +16,7 @@
         android:theme="@style/Theme.MillieWorkTheme"
         tools:targetApi="31">
         <activity
-            android:name=".presentation.view.CatListActivity"
+            android:name="com.millie.presentation.view.CatListActivity"
             android:exported="true"
             android:theme="@style/Theme.MillieWorkTheme">
             <intent-filter>
